test/test_*.out

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 vesihiisi
 vesihiisi-dev
 libvesihiisi*
-test/test_heap
-test/test_arena
-test/test_bitset
+test/*.out
 
 # Qt Creator stuff:
 vesihiisi.creator
